--- a/lib/l10n/app_ru.arb
+++ b/lib/l10n/app_ru.arb
@@ -19,5 +19,6 @@
     "empty_title": "Название должно быть не пустым",
     "done_btn": "Готово",
     "init_title": "Новый таймер",
-    "delete_all_btn": "Удалить все данные"
+    "delete_all_btn": "Удалить все данные",
+    "save_btn": "Сохранить"
 }
